// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The basic notification renders correctly 1`] = `
<ToastNotification
  title="Success!"
  type="positive"
>
  <GenericNotification
    autohide={false}
    persistent={false}
    style="toast"
    title="Success!"
    type="positive"
  >
    <div
      className="notification positive toast fading"
      onTransitionEnd={[Function]}
      style={
        Object {
          "marginTop": undefined,
        }
      }
    >
      <div
        className="icon"
      >
        <Icon
          icon={null}
          inheritSize={true}
          role="presentation"
        >
          <svg
            aria-hidden={true}
            className="icon inheritSize"
            focusable="false"
            role="presentation"
            viewBox="viewBox"
          >
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </div>
      <div
        className="textContainer"
      >
        <span
          className="title"
        >
          Success!
        </span>
        <span
          className="textWrapper"
        >
          <span
            className="text"
          >
            It worked!
          </span>
        </span>
      </div>
      <button
        className="cancel"
        onClick={[Function]}
      >
        <span
          className="cancelInner"
        >
          <Icon
            icon={null}
            inheritSize={true}
            role="img"
            title="close notification"
          >
            <svg
              aria-labelledby="id-2-title"
              className="icon inheritSize"
              focusable="false"
              role="img"
              viewBox="viewBox"
            >
              <title
                id="id-2-title"
              >
                close notification
              </title>
              <use
                xlinkHref="#id"
              />
            </svg>
          </Icon>
        </span>
      </button>
    </div>
  </GenericNotification>
</ToastNotification>
`;

exports[`You can hide the close icon on an autohide toast notification 1`] = `
<ToastNotification
  autohide="hideCloseIcon"
  title="Info"
  type="negative"
>
  <GenericNotification
    autohide={true}
    persistent={true}
    style="toast"
    title="Info"
    type="negative"
  >
    <div
      className="notification negative toast fading"
      onTransitionEnd={[Function]}
      style={
        Object {
          "marginTop": undefined,
        }
      }
    >
      <div
        className="icon"
      >
        <Icon
          icon={null}
          inheritSize={true}
          role="presentation"
        >
          <svg
            aria-hidden={true}
            className="icon inheritSize"
            focusable="false"
            role="presentation"
            viewBox="viewBox"
          >
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </div>
      <div
        className="textContainer"
      >
        <span
          className="title"
        >
          Info
        </span>
        <span
          className="textWrapper"
        >
          <span
            className="text"
          >
            Currently processing...
          </span>
        </span>
      </div>
    </div>
  </GenericNotification>
</ToastNotification>
`;
